--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
+html {
+  background: radial-gradient(50% 34.34% at 50% 50.05%, #F5F9FF 0%, #F7F7F7 100%), #F6F6F6;
+  padding: 0 20px;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'JakartaSans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -10,4 +16,23 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html, body, #root {
+  width: 100%;
+  height: 100%;
+}
+
+@font-face {
+  font-family: 'JakartaSans';
+  src:  url('./assets/webfonts/PlusJakartaSans-Regular.woff2') format('woff2'),
+  url('./assets/webfonts/PlusJakartaSans-Regular.woff') format('woff');
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'JakartaSans';
+  src:  url('./assets/webfonts/PlusJakartaSans-Bold.woff2') format('woff2'),
+  url('./assets/webfonts/PlusJakartaSans-Bold.woff') format('woff');
+  font-weight: bold;
 }
