--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 html {
-  background: radial-gradient(50% 34.34% at 50% 50.05%, #F5F9FF 0%, #F7F7F7 100%), #F6F6F6;
+  background: radial-gradient(40.48% 67.6% at 50% 32.4%, #ECF4FF 0%, #F7F7FF 52.77%, #F7F7F7 100%), #F6F7FA;;
 }
 
 body {
