--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,7 @@ body {
 }
 
 html {
-  background: radial-gradient(
-      40.48% 67.6% at 50% 32.4%,
-      #ecf4ff 0%,
-      #f7f7ff 52.77%,
-      #f7f7f7 100%
-    ),
-    #f6f7fa;
+  background-color: "#F8F0E5";
 }
 
 body {
@@ -20,7 +14,7 @@ body {
     "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding: 0 20px;
+  padding: 0;
   box-sizing: border-box;
 }
 
